wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: vishnuyadav799/wisecow-app:latest # Update with your Docker Hub username
        ports:
        - containerPort: 4499  # Change this if your HTTPS port is different
