wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 443  # Use 443 for HTTPS
      targetPort: 4499  # Your container port for HTTPS
      nodePort: 31500  # You can choose another NodePort if needed
